--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,32 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.dashboard {
+  background-color: #F2F5F8;
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: .20fr 1fr;
+  column-gap: 2.5rem;
+}
+
+.dashboard__body {
+  padding: 2rem;
+}
+
+.para {
+  margin: .5rem;
+  color: rgb(114, 111, 111);
+}
+
+.flx-space-between {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.u-md-padding-vertical {
+  padding: 2rem 0;
+}
