--- a/styles/components/dashboard/team-members/modals/add-team-member-form.module.css
+++ b/styles/components/dashboard/team-members/modals/add-team-member-form.module.css
@@ -1,5 +1,5 @@
 .add-tm-form__wrapper {
-    padding: .5rem 1.5rem;
+    padding: .5rem 1.5rem 0 1.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
