--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ a {
 
 .dashboard {
   background-color: #F2F5F8;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: grid;
   grid-template-columns: .20fr 1fr;
@@ -25,12 +25,13 @@ a {
 }
 
 .dashboard__body {
+  height: 100%;
   padding: 2rem;
 }
 
 .para {
   margin: .5rem;
-  color: rgb(114, 111, 111);
+  color: rgb(63, 61, 61);
 }
 
 .flx-space-between {
