--- a/styles/UI/card-item.module.css
+++ b/styles/UI/card-item.module.css
@@ -1,5 +1,5 @@
-.team-member-card {
-    width: 240px;
+.card-item {
+    width: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
