--- a/styles/UI/card.module.css
+++ b/styles/UI/card.module.css
@@ -3,6 +3,6 @@
     min-height: 100px;
     border-radius: 6px;
     padding: 1rem 2rem;
-    background-color: #fff;
+    background-color: #F2F8FF;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
