--- a/styles/pages/company-watchlist.module.css
+++ b/styles/pages/company-watchlist.module.css
@@ -1,9 +1,9 @@
-.pitch-deck {
+.company-watchlist {
     width: 100%;
     height: 100%;
     min-height: 70vh;
     padding: 4rem 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
