--- a/styles/pages/profile.module.css
+++ b/styles/pages/profile.module.css
@@ -2,12 +2,13 @@
     width: 100%;
     height: 100%;
     min-width: 650px;
-    padding: 4rem 6rem;
+    padding: 4rem;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .profile-info__form--wrapper {
-    width: 60%;
+    padding: 4rem 0;
+    width: 75%;
 }
